--- a/common/src/main/resources/config/log4j.properties
+++ b/common/src/main/resources/config/log4j.properties
@@ -1,7 +1,8 @@
 # movsim/core log4j configuration file
 # Set root logger level to DEBUG and its only appender to A1.
 # Logging levels: DEBUG < INFO < WARN < ERROR < OFF
-log4j.rootLogger=INFO, A1
+# log4j.rootLogger=INFO, A1
+log4j.rootLogger=OFF
 #log4j.rootLogger=INFO, A1, file
 
 # define logging level threshold for appender A1
